syntax = "proto3";

option csharp_namespace = "Profile.Infrastructure.Protos";

message Profile {
  string id = 1;
  string name = 2;
  string last_name = 3;
  string birth_date = 4;
  Gender gender = 5;
  string bio = 6;
  int32 height = 7;
  bool show_age = 8;
  int32 age_from = 9;
  int32 age_to = 10;
  int32 max_distance = 11;
  Gender preferred_gender = 12;
  Goal goal = 13;
  City city = 14;
  Country country = 15;
  repeated Language languages = 16;
  repeated Interest interests = 17;
  repeated Image images = 18;
  repeated ProfileEducation education = 19;
}

message Goal {
  int32 id = 1;
  string name = 2;
}

message City {
  int32 id = 1;
  string name = 2;
}

message Country {
  int32 id = 1;
  string name = 2;
}

message Language {
  int32 id = 1;
  string name = 2;
}

message Interest {
  int32 id = 1;
  string name = 2;
}

message Image {
  int32 id = 1;
  string url = 2;
}

message ProfileEducation {
  string profileId = 1;
  int32 educationId = 2;
  string educationName = 3;
  string description = 4;
}

enum Gender {
  MALE = 0;
  FEMALE = 1;
  UNDEFINED = 2;
}

message GetProfilesRequest {
  repeated string profile_ids = 1;
}

message GetProfilesResponse {
  repeated Profile profiles = 1;
}

service ProfileService {
  rpc GetProfilesByIds(GetProfilesRequest) returns (GetProfilesResponse);
}